--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="color_first_line">#ffe300</color>
+    <color name="color_pop">#99a4b7</color>
+    <color name="color_line">#e9e9e9</color>
+    <color name="item_wheel_title_text_color">#057DFF</color>
+    <!--主色-->
+    <color name="main_color">#FFF1621D</color>
 </resources>
